--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="StudyFlow - Aplicativo de gerenciamento de estudos inteligente" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/icon-192.png" />
-    <title>StudyFlow PWA Study Management</title>
+    <title>StudyFlow</title>
     <meta property="og:image" content="https://bolt.new/static/og_default.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
